discussion/kv_engine/174325/174325_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: SnoozeTime class

Change-Id: I5cf966fbd6fb69fe7ef9388299bcc6fa12fd97b9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-28 16:16:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-28 16:17:02.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17171/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:18:28: error: use of undeclared identifier "std" [clang-diagnostic-error]
template <class Duration = std::chrono::milliseconds>
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:30:9: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        snooze = desiredSnoozeTime;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:42:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:42:62: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
                                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:43:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:43:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:48:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:48:62: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
                                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:49:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:49:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:54:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<Duration>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:54:49: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<Duration>(snooze);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:58:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::get<NonDurationSnoozeType>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:58:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::get<NonDurationSnoozeType>(snooze);
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:62:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::get<Duration>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:62:35: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::get<Duration>(snooze);
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:69:11: error: member initializer "snooze" does not name a non-static data member or base class [clang-diagnostic-error]
        : snooze(nonDurationType) {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:72:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::variant<NonDurationSnoozeType, Duration> snooze;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17171/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:18:28:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17171/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16133/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
